tests/error/poly_errors_py312/invalid_bound1.py
from guppylang.decorator import guppy


@guppy
def main[x: 42]() -> None:
    ...


guppy.compile(main)
